# xorcist

./: .gitignore  .ignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release.yml
src/: app.rs  conventional.rs  error.rs  graph.rs  keys.rs  main.rs  text.rs  ui.rs
src/app/: commands.rs  input.rs  loading.rs  mod.rs  navigation.rs  tests.rs
src/jj/: graph_log.rs  log.rs  mod.rs  repo.rs  runner.rs  show.rs
