[package]
name = "xorcist"
version = "0.1.0"
edition = "2024"
description = "A TUI client for jj (Jujutsu VCS)"
license = "MIT"
authors = [""]
repository = ""
readme = "README.md"
keywords = ["jj", "jujutsu", "tui", "cli", "vcs"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "xor"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
unicode-width = "0.2"
tui-input = "0.11"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
