[package]
name = "xorcist"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
description = "A TUI client for jj (Jujutsu VCS)"
license = "MIT"
authors = ["aobask <123452733+fpdy@users.noreply.github.com>"]
repository = "https://github.com/fpdy/xorcist"
readme = "README.md"
keywords = ["jj", "jujutsu", "tui", "cli", "vcs"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "xor"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
unicode-width = "0.2"
tui-input = "0.11"
regex = "1"

# ANSI parsing for jj graph output
ansi-to-tui = "8"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
